Fix #20.